Fixed exporter bugs. Fixed loader bugs. Identified loading bottleneck. Small refactor.